package com.group.study.utils.redis.callback;

public interface IRedisOperateCallBack<V> {
}
